# sleepy-discord

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  00589986.5bd443cd.js  00589986.ac82364e.js  00994a69.8168ef21.js  00994a69.e53d6059.js  00e18b3a.06cd94fd.js  00e18b3a.0a8b0210.js  00e18b3a.0ce70711.js  00e18b3a.1d90573a.js  00e18b3a.214096d2.js  00e18b3a.294456a0.js  00e18b3a.2d7200e5.js  00e18b3a.310c7942.js  00e18b3a.32992b9d.js  00e18b3a.33e685f7.js  00e18b3a.41e92087.js  00e18b3a.425e4f67.js  00e18b3a.42ed6538.js  00e18b3a.46bcdba0.js  00e18b3a.46d5c012.js  00e18b3a.5b90118a.js  00e18b3a.5cdaf6a3.js  00e18b3a.643b0ced.js  00e18b3a.68f4057f.js  00e18b3a.7021e115.js  00e18b3a.74cfb832.js  00e18b3a.7a15222b.js  00e18b3a.7e48d62f.js  00e18b3a.7ff6889c.js  00e18b3a.800a617c.js  00e18b3a.846a0eb9.js  00e18b3a.884e65be.js  00e18b3a.8ddbb172.js  00e18b3a.91819806.js  00e18b3a.948d821c.js  00e18b3a.956e8f0b.js  00e18b3a.9580edb0.js  (+12858 more)
.github/: FUNDING.yml
.github/workflows/: ccpp.yml  documentation.yml
White Haired Cat Girl/: White Haired Cat Girl.vcxproj  client.cpp  common.h  discord_object_interface.cpp  embed.cpp  embed.h  message.cpp  message.h  server.cpp  sleepy_discord.h  user.cpp  user.h
White Haired Cat Girl/examples/: example0.cpp
assets/css/: styles.163e2433.css  styles.234c0a47.css  styles.540182c0.css  styles.b078b205.css
assets/js/: 00e18b3a.084a4c99.js  00e18b3a.1683f0e8.js  00e18b3a.275d51d7.js  00e18b3a.50c6e312.js  00e18b3a.5ecb3e2f.js  00e18b3a.64e08e59.js  00e18b3a.7861732a.js  00e18b3a.7a81e8dc.js  00e18b3a.8daffbe9.js  00e18b3a.9e7abab8.js  00e18b3a.a44cc18f.js  00e18b3a.a8666666.js  00e18b3a.aa591e74.js  00e18b3a.b259d56d.js  00e18b3a.bc85ed4e.js  00e18b3a.bf04cafc.js  00e18b3a.d0762a33.js  00e18b3a.df90dfd8.js  00e18b3a.e464b11f.js  00e18b3a.e4ecc9b5.js  00e18b3a.f5aaa4f0.js  00e18b3a.facee64a.js  00e3b677.02b980fa.js  00e3b677.03131b46.js  00e3b677.18fd0ca4.js  00e3b677.28e914f1.js  00e3b677.45b0955b.js  00e3b677.5437d558.js  00e3b677.560d8db3.js  00e3b677.5a13bb27.js  00e3b677.5ac3a0e9.js  00e3b677.6cc1232f.js  00e3b677.6d5438a7.js  00e3b677.8a83192a.js  00e3b677.97a8797f.js  00e3b677.b063b2af.js  00e3b677.c55823bd.js  00e3b677.d043c73b.js  00e3b677.d4ae4de1.js  00e3b677.d6991d0e.js  (+6922 more)
blog/: archive.html  atom.xml  index.html  rss.xml  welcome.html
blog/archive/: index.html
blog/welcome/: index.html
bot_example/: CMakeLists.txt  example0.cpp
buildtools/: Makefile.3ds  Makefile.linux  Readme.md
buildtools/asio-download/: CMakeLists.txt
buildtools/cmake/: sleepy-discord-config.cmake.in
buildtools/cpr-download/: CMakeLists.txt
buildtools/websocketpp-download/: CMakeLists.txt
cmake/: Findasio.cmake
docs/: api.html  common-build-errors.html  connect-options.html  discord-objects.html  doc1.html  embeds.html  events.html  generator-compile.html  hello-world.html  index.html  mdx.html  only-sleepy-discord.html  requests.html  setup-standard-cli.html  setup-standard-gui.html  setup-standard-vs-cmake.html  setup-standard.html  slash-commands.html  snowflake.html  unicode.html  voice.html
docs/common-build-errors/: index.html
docs/connect-options/: index.html
docs/discord-objects/: index.html
docs/doc1/: index.html
docs/embeds/: index.html
docs/events/: index.html
docs/generator-compile/: index.html
docs/hello-world/: index.html
docs/mdx/: index.html
docs/only-sleepy-discord/: index.html
docs/reference/: index_classes.html  index_examples.html  index_files.html  index_groups.html  index_namespaces.html  index_pages.html
docs/requests/: index.html
docs/setup-standard/: index.html
docs/setup-standard-cli/: index.html
docs/setup-standard-gui/: index.html
docs/setup-standard-vs-cmake/: index.html
docs/slash-commands/: index.html
docs/snowflake/: index.html
docs/unicode/: index.html
docs/voice/: index.html
documentation/: index.html  prism.js  sitemap_reference.js
documentation/DiscordClient/: addReaction.html  deleteChannel.html  deleteMessage.html  editMessage.html  editNickname.html  index.html  pinMessage.html  sendMessage.html  unpinMessage.html
documentation/stylesheets/: Stylesheet.css  prism.css
enc_temp_folder/7d53c2e157c0fc5ec6378ed5c2b61d50/: default_functions.cpp
enc_temp_folder/8d91631b56e45fda63d42c8b0b98e8/: client.h
examples/hello/: CMakeLists.txt  example0.cpp  hello.vcxproj
examples/rock-paper-scissors/: CMakeLists.txt  main.cpp  rock-paper-scissors.vcxproj
examples/slash-commands/: CMakeLists.txt  main.cpp
examples/sound-player/: CMakeLists.txt  IO_file.h  main.cpp
examples/wasm_example/: build.bat  how to get lib.txt  how_to_get_lib.txt  index.html  mod.js  session.js  wasm_example.vcxproj  wasm_session.h  wasm_websocket.cpp  wasm_websocket.h  websocket.js
include/sleepy_discord/: asio_include.h  asio_schedule.h  asio_udp.h  asio_websocket.h  (+65 more)
javascripts/: all.js  all_nosearch.js
search/: index.html
sleepy_discord/: CMakeLists.txt  asignments_client.cpp  asio_udp.cpp  asio_websocket.cpp  attachment.cpp  attachment.h  channel.cpp  channel.h  client.cpp  client.h  common.cpp  common.h  cpr_session.cpp  cpr_session.h  custom_session.h  default_functions.cpp  discord_object_interface.cpp  discord_object_interface.h  embed.cpp  endpoints.cpp  error.h  experimental.cpp  experimental.h  gateway.cpp  gateway.h  http.cpp  http.h  invite.cpp  invite.h  json.c  json.cpp  json.h  json_wrapper.cpp  make_version.h.js  message.cpp  message.h  permissions.cpp  permissions.h  sd_error.cpp  server.cpp  (+24 more)
sleepy_discord/IncludeNonexistent/websocketpp/config/: asio_client.hpp
source/: basic text bot.html.md  breaking changes.html.md  compile.html.md  documentation.html.md  faq.html.md  index.html  index.js  link.html.md  only-sleepy-discord.md  setup-standard-cli.html.md  setup-standard-clion-cmake.html.md  setup-standard-gui.html.md  setup-standard-vs-cmake.html.md  setup-standard.html.md  setup.html.md  voice.html.md
stylesheets/: Sstylesheet.css  Stylesheet.css  github-light.css  oldStylesheet.css  oldnormalize.css  print.css  prism.css  screen.css  stylesheet.css
(+638 files in other folders)
